<resources>
    <string name="app_name">Engineer\'s Way</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Introduction"> Engineering is all about learning stuff and implementing in practical life.</string>
    <string name="Prerequisites">This app is for people new to the world\'s tactics and have a long a to go..</string>
    <string name="Gadget_ques_01">Q1. Confused! Which phone to buy? How can you go for the best? </string>
    <string name="Gadget_ans_01">-  Choosing a phone becomes a hassle when we want to buy the best option available.\n
    So what should you look for:-
    \n&#8226; RAM - Atleast 2gb otherwise the device will lag whilst running most applications.
    \n\t\tAlthough 3gb RAM is now preferred.
    \n&#8226; Processor - Octa Core is always better than Quad Core as <b>8>4</b>.\nAlso <i>Snapdragon/Exynos</i> based processors are better than Mediatek.\nFrequency - as high as possible
    \n&#8226; Camera - more <b>MPs</b> better .Depends from device to device eg. Oppo,Sony,Mi,Moto,Vivo,Samsung etc.. have much better picture quality than Intex,Micromax
    \n&#8226; Android Operating System - Latest 8.0 followed by 7.1.2 , 7.1.1 ,...., 6.0.1,..., 5.1.1,...4.4,better to stick to the latest.
    \n&#8226; Display Size - Should be maximum 5.5 inch. You should buy it as per your need.
    \n&#8226; Battery - Battery capacity should be high 4,000mah>>3,000mah your phone will last more than a day with 4,000mah or above.
    \n&#8226; Atleast one SIM  slot should support 4G VoLTE .
    \n&#8226; Internal space should be atleast 32 gb for smooth performance and avoid sd card.
    \n&#8226; Should support OTG .
    \n&#8226; Hybrid slot should cause a problem if you want to use both sim cards and sd card together because there is a trade off between one SIM and one sdcard
    \n&#8226; Native video call feature should be there i.e. direct video calling(without any app).
    </string>
    <string name="Gadget_ans_02"><u>Decide your range first!</u>\n\n
    Make your decision that either you want to buy a laptop for Day to Day Use Or For Gaming.\n
    Things you should keep in mind before buying\n
    \n   1. Day To Day Use
    \n   2. Gaming
        \n\n\t\t\t <u> Day to Day Use</u>
        \n  Rs 20,000 to Rs 35,000 budget laptop is preferred for Day to Day use.
        \n  Things you should keep in mind before buying :-
        \n\t &#8226; Processor - Buy Quad Cores only. i5 should be the prime priority, i3(6th Gen)/i3(5th Gen) are good selections.
        \n\t &#8826; Hard disk space - 1TB best choice as is twice as much as 500GB.
        \n\t &#8226; Operating System  - Windows : You have to pay for it(Rs 3000). Ubuntu/Free-DOS : Free
        \n\t &#8226; Atleast one USB 3.0 port for high speed (100MBps).
        \n\t &#8226; Intel HD Graphics (Integrated Graphics) - For Day to Day and low end gaming (csgo etc..)
        \n\t &#8226; Webcam,bluetooth,VGA port should be there.
        \n\t &#8226; Brand - HP,DELL,ASUS prime choice , Lenovo,SAMSUNG secondary choice.
        \n\t &#8226; LED key backlight.
        \n\n\n\t\t\t<u> For Gaming</u>
         \n  Rs 35,000 to Rs 70,000 budget laptop is preferred for Gaming.
         \n  Things you should keep in mind before buying :-
          \n\t &#8226; Processor - Buy Quad Cores only. i7 7/6th GEN should be the prime priority, i5(7th Gen),i5(6th Gen).... are good selections , i3 not fit for high end games.
        \n\t Graphic Card - Nvidia 940,930,920,... GEFORCE GTX..... etc with 2GB to 4GB <b> dedicated video memory</b> : prime choice\nAMD Radeon             \n\t Graphic Card - Nvidia 940,930,920,... GEFORCE GTX..... etc with 2GB to 4GB dedicated video memory : prime choice\nAMD Radeon  : Good Choice
        for high end gaming(GTA 5,FAR CRY 4,ASSASSIN\'s CREED).\n\n\n
        Rest features same as mentioned for Day to Day Life.
    </string>
    <string name="Gadget_ans_03">\n\t &#8226;Bluetooth Ear Phones and Speakers\n&#8226;External Hard Disk etc...\n\n<i>*Special*</i>\n\t &#8226; AirBar\n\t &#8226; Android Watch etc...</string>
    <string name="Gadget_ques_02">Q2. Thinking of buying a Laptop to buy? How can you go for the best?</string>
    <string name="Gadget_ques_03">Best Gadgets to have? Special gadgets that exists?</string>
    <string name="bank_imt">

        Instant Money Transfer (IMT)------------

\nIMT through Internet Banking

\n\nTo send an IMT to a receiver, all you need is the receiver\'s mobile phone number. You can send money to a receiver by following the below mentioned process:-
        \n\nInitiating an IMT
\nAxis Bank customers can login to Axis Bank Internet Banking and initiate IMT. Customers can register beneficiaries by entering the beneficiary\'s name, mobile number and address. \nThis beneficiary registration is a one-time process. Once a beneficiary is successfully registered, IMT can be initiated by entering the Amount to be transferred and Setting a sender\'s code. (The beneficiary would need this code to withdraw cash from the ATM).
\nAs soon as an IMT is issued the Beneficiary receives an SMS on his or her mobile number containing the details of the IMT. The details present in the SMS are:
\nThe IMT amount
\nSMS Code (Axis Bank will generate this and send to the beneficiary)
\nIMT ID (a unique code which can be used to refer your IMT transaction)
\nIMT Expiry date
\nWithdraw the IMT
\nCancel IMT
\nStatus Check
\nLimits
\nIMT through ATM

\n\nInitiating the IMT
\nAn Axis Bank customer can send money to any mobile number in India by providing the beneficiary\'s mobile number, amount to be transferred and setting the Sender\'s code (The beneficiary would need this code to withdraw cash from the ATM).
\n\nWithdrawal
\nIf the beneficiary has a Debit card, he or she can withdraw the IMT by using his or her Axis Bank debit card. After inserting the card, the receiver can select IMT > WITHDRAW IMT and provide the following details:
\nMobile number on which he or she has received the IMT details
\nThe Sender\'s code
\nThe SMS code
\nThe IMT amount
\nOn validation of the above-mentioned details, the cash will be dispensed from the ATM.
\nIf the beneficiary doesn\'t have a Debit card (of any recognized Bank), he or she can perform a card less IMT withdrawal at any Axis Bank ATM.


\n\nA sender will be charged Rs. 25 (inclusive of taxes) for every IMT transaction he or she issues to a receiver. Please note that there are no reversals of these charges in case the IMT expires or is cancelled.
\nThere is no charge for cancellation of an IMT.

Axis Bank is pleased to announce the launch of Instant Money Transfer (IMT) service for the Bank\'s customer.
\n\nIMT is an innovative domestic money remittance service that allows you to send money to a receiver only by using the receiver\'s mobile number. The receiver can withdraw money from an Axis Bank ATM with or without using a card. The receiver receives all the details required for withdrawal of the cash on his or her mobile phone.
\nThe importance of IMT is multi-fold. You can use the service for any of these cases:
\nThe receiver prefers cash
\nThe receiver needs money instantly \ needs emergency cash
\nThe receiver doesn\'t have a bank account
\nWhen you don\'t know the receiver\'s bank account details
\nThe receiver is not within easy distance (to deliver cash or send a cheque by hand)


\n\nHow to receive money using IMPS?

\nUsing Account number and IFSC Code	Using Mobile Number and MMID
\nNow share your Account number and IFSC with the sender so that he\she can send money to your account instantly.

\n\nUsing Mobile Number and MMID
\nNow share your Account number and IFSC with the sender so that he\she can send money to your account instantly.
\nShare your MMID and Mobile number with the sender so that he\she can send money to your account instantly.
\nHow to generate MMID.
\nGenrate MMID through MobileBanking
\nLogon to MobileBanking App or logon to m.hdfcbank.com from mobile internet browser
\nClick on accounts section
\nClick on Generate MMID
\nor\nGenerate MMID through NetBanking
\nLogin to NetBanking, and click on Generate MMID transaction in left menu, under Request section.
\nEnter the details and Confirm
\nMMID is generated for your account.
\nor
\nCall PhoneBanking to generate MMID
\nCall PhoneBanking number of your region
\nSelect Language
\nSelect 1 for Banking
\nSelect 6 to talk to agent to register for IMPS and generation of MMID
\nRequest for IMPS registration will be tken and MMID will be sent to your Mobile number by next working day.


\n\n\n\n

How to send money using IMPS-------------

\n •Send Money using Account number and IFSC
\n •NetBanking
\n •Login to NetBanking and Click on "Funds Transfer" Tab
\n •Click on IMPS Funds transfer using account number, enter the details, and confirm the transaction.
\n •You will receive the confirmation sms for IMPS transaction

\n •Send Money using MMID and Mobile Number

\n\n\nNetBanking
\n •Login to NetBanking and Click on "Funds Transfer" Tab
\n •Click on IMPS Funds transfer using Mobile number, enter the details, and confirm the transaction.
\n •You will receive the confirmation sms for IMPS transaction
\n\n

    </string>
    <string name="Scholorship_question_1">Q1. How can I get a UP scholarship?</string>
    <string name="Scholorship_A_1">-  Up government provides prematric and postmatric scholarships every year. Whole process is divided into two parts.

\n\nRegister at website U.P. Scholarship and Fee Reimbursement Online System using your personal and academic details. Regstration process generally starts in July month.
Take the print out of registration form and attest/authenticate by college/School authorities.
        \n\tThere are basically four branches of scholarship, prematric, postmatric(11–12), postmatric(colleges in UP) and postmatric(colleges outside UP).

\n\nGetting scholarship in first 3 branches is very easy as there are many students who are filling the form. However, in fourth category, there may be chances that your college may not be in the list.
        In this case, you have to contact the scholarship department to enlist your college which may add some chaos.
    </string>
    <string name="Scholorship_question_2">Q2. Documents required to get a Scholarship?</string>
    <string name="Scholorship_A_2">-  The following documents are to be sent by Post
        \n1. Print out Of Scholarship Application Form.
        \n2. ID Card Of Institute.
        \n3. Aadhar Card.
        \n4. Copy of Bank\'s Passbook.
        \n5. Fee Receipt Copy
        \n6. Income certificate &amp; it\'s net slip.
        \n7. Caste certificate &amp; it\'s net slip.
        \n8. Domicile certificate and it\'s net slip.
        \n9. Marksheet of last year of passing.
        \n10. Intermediate &amp; High School Certificate.
        \n11. Affidavite of Parent (for annual income).
        \n12. Aadhar &amp; Pan Card Of Parent(for Form 6).
    </string>
    <string name="Scholorship_question_3">Q3. Where to get net slip of certificates?</string>
    <string name="Scholorship_A_3">-  Go to
        \n164.100.181.28/edistrict/certificate/certVerify.aspx</string>
</resources>